--- a/my-project/config/routes.yaml
+++ b/my-project/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+first_app:
+  path: /welcome/page-b
+  controller: App\Controller\index::data
