--- a/my-project/config/packages/doctrine.yaml
+++ b/my-project/config/packages/doctrine.yaml
@@ -8,6 +8,10 @@ parameters:
 doctrine:
     dbal:
         # configure these for your database server
+        dbname: staz
+        user: root
+        password: root
+        host: localhost
         driver: 'pdo_mysql'
         server_version: '5.7'
         charset: utf8mb4
