--- a/my-project/config/routes.yaml
+++ b/my-project/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+app_date:
+  path: /welcome/page-a
+  controller: App\Controller\firstPage::date
