--- a/my-project/config/packages/security.yaml
+++ b/my-project/config/packages/security.yaml
@@ -18,7 +18,16 @@ security:
 #            http_basic: ~
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
-            # form_login: true
+            form_login:
+              check_path: login
+              login_path: login
+              csrf_token_generator: security.csrf.token_manager
+              default_target_path: product_category_index
+              use_referer: true
+
+            logout:
+              path: logout
+              target: product_category_index
             # https://symfony.com/doc/current/security/form_login_setup.html
 
     # Easy way to control access for large sections of your site
