--- a/my-project/composer.json
+++ b/my-project/composer.json
@@ -25,7 +25,8 @@
         "symfony/web-link": "^4.1",
         "symfony/webpack-encore-pack": "*",
         "symfony/yaml": "^4.1",
-        "twbs/bootstrap": "^4.1"
+        "twbs/bootstrap": "^4.1",
+        "white-october/pagerfanta-bundle": "^1.2"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
