--- a/my-project/composer.json
+++ b/my-project/composer.json
@@ -34,7 +34,8 @@
         "symfony/maker-bundle": "^1.5",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "^1.0",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/web-server-bundle": "^4.1",
+        "squizlabs/php_codesniffer": "1.*"
     },
     "config": {
         "preferred-install": {
